--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,39 @@ img{
   height: 50px;
 }
 
-.col.menu ul li{
+.rowNotifications{
+  background-color: grey;
+}
+
+.rowFilter > div{
+  border: 1px solid black;
+  padding: 5px;
+  background-color: white;
+}
+
+#inputFilter {
+  outline: none;
+  border: none;
+  width:70%
+}
+
+.circle {
+  height: 50px;
+  width: 50px;
+  background-color: white;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.col.menu .rowUser ul li{
   display: inline-block;
+}
+
+.rowContacts ul li{
+  list-style-type: none;
+  background-color: white;
+  border-bottom: 1px solid grey;
 }
 
 /* Column Chat */
