--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ img{
 }
 
 .rowFilter > div{
-  padding: 5px;
+  padding: 8px;
   background-color: white;
   margin: 6px 10px;
 }
@@ -155,6 +155,35 @@ img{
   height: calc(100% - 140px);
   background: url('../img/mine.jpg');
   overflow-y: auto;
+}
+
+.rowMainChat ul{
+  flex-direction: column;
+  padding: 40px 40px 0 40px
+}
+
+.message{
+  width: 280px;
+  border-radius: 10px;
+  margin: 5px 0px;
+  padding: 15px;
+  flex-direction: column;
+  background-color: white;
+}
+
+.message.sent{
+  background-color: #D5F9BA;
+  align-self: flex-end;
+}
+
+.message.received{
+  background-color: white;
+}
+
+.message p:last-child{
+  font-size: 0.6rem;
+  color: grey;
+  align-self: flex-end;
 }
 
 .rowInputText{
