--- a/css/style.css
+++ b/css/style.css
@@ -183,13 +183,35 @@ img{
 }
 
 .message{
+  position: relative;
   width: 280px;
   border-radius: 10px;
   margin: 5px 0px;
-  padding: 8px;
+  padding: 10px;
   flex-direction: column;
   background-color: white;
 }
+
+.message > span{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  color: grey;
+  opacity: 0.5;
+  background-color: inherit;
+  display: none;
+}
+
+.message > p{
+  padding-right: 20px;
+}
+
+.message:hover #chevron{
+  display:flex;
+  background-color: inherit;
+}
+
+
 
 .message.sent{
   background-color: #D5F9BA;
